add client to quotation serializer

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -6,3 +6,6 @@ DB_USER="database user"
 DB_PASSWORD="database password"
 #DB_NAME="remove this variable to use sqlite as dev database"
 CORS_ALLOWED_ORIGINS="http://localhost:3000"
+CLOUD_NAME='tu_cloud_name'
+API_KEY='tu_api_key'
+API_SECRET='tu_api_secret'
