--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -1,15 +1,3 @@
 {
-  "rewrites": [
-    {
-      "source": "/admin/:path*",
-      "destination": "/admin/index.html"
-    }
-  ],
-  "redirects": [
-    {
-      "source": "/",
-      "destination": "/index.html",
-      "statusCode": 200
-    }
-  ]
+"rewrites": [{ "source": "/(.*)", "destination": "/index.html" }]
 }
