--- a/backend/.env.example
+++ b/backend/.env.example
@@ -4,7 +4,7 @@ ALLOWED_HOSTS="127.0.0.1"
 DB_HOST="database host"
 DB_USER="database user"
 DB_PASSWORD="database password"
-#DB_NAME="remove this variable to use sqlite as dev database"
+DB_NAME="database name"
 CORS_ALLOWED_ORIGINS="http://localhost:3000"
 CLOUD_NAME='tu_cloud_name'
 API_KEY='tu_api_key'
